# ComfyUI_SavePromptAndOutput

./: README.md  __init__.py  hooks.py  pyproject.toml  save_with_prompt.py
.github/workflows/: publish.yml
