[project]
name = "comfyui_save_prompt_and_output"
description = "ComfyUI custom node to save prompt and intermediate outputs"
version = "1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "t22m003" }
]
keywords = ["comfyui", "logging", "utility"]
dependencies = []

[project.urls]
Repository = "https://github.com/t22m003/ComfyUI_SavePromptAndOutput"
